# trifle-proxy

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/trifle_proxy/: __init__.py  __main__.py  claude.py  cli.py  config.py  health.py  logging_config.py  metrics.py  proxy.py  resilience.py  security.py
templates/: litellm.yaml.j2
tests/: test_claude.py  test_cli.py  test_config.py  test_health.py  test_logging.py  test_metrics.py  test_proxy.py  test_resilience.py  test_security.py
