[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trifle-proxy"
version = "1.0.0"
description = "A lightweight CLI to run LiteLLM proxy and wire Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aleksey Dobrynin" }
]
keywords = ["llm", "proxy", "litellm", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "psutil>=5.9",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "build>=0.10",
    "twine>=4.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "types-PyYAML>=6.0",
    "types-psutil>=5.9",
]

[project.scripts]
trifle-proxy = "trifle_proxy.cli:main"

[project.urls]
Homepage = "https://github.com/madlexa/trifle-proxy"
Repository = "https://github.com/madlexa/trifle-proxy"
Issues = "https://github.com/madlexa/trifle-proxy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/trifle_proxy"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=trifle_proxy --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["trifle_proxy"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used: asserts are fine in this codebase
